objects/Product_Category__c.object
<CustomObject>
    <description>This is the control list of Product Categories per show</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category_Code__c</fullName>
        <label>Product Category Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Product Categories</relationshipLabel>
        <relationshipName>Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProductCategoryKey</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>